--- a/Backend/package.json
+++ b/Backend/package.json
@@ -26,6 +26,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.11",
     "nodemon": "^3.1.11",
+    "resend": "^6.6.0",
     "validator": "^13.15.23"
   }
 }
